# Circuit_detector

./: .dockerignore  .gitignore  CMakeLists.txt  Makefile  README.md  app_config.h  classes.json  dockerfile  labels.txt  main.cpp  model.onnx  onnx_classifier.cpp  onnx_classifier.h  pipeline.cpp  pipeline.h  requirements.txt  resultados.csv  roi_detector.cpp  roi_detector.h  symbol_classifier.cpp  symbol_classifier.h  test.py  train.py
input/: input.h  video_input.cpp
pipeline/: pipeline.cpp  pipeline.h
